--- a/index.html
+++ b/index.html
@@ -11,12 +11,45 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
     </head>
+
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <!-- Header -->
+        <div class="container color-dark">
+            <div class="header color-dark">
+            <!-- Left Div -->
+                <div>
+                    <ul class="header-logo text-header-logo">
+                        <li>Header Logo</li>
+                        </ul>
+                    </div>
+            <!-- Right Div -->
+                <div>
+                    <ul class="header-links text-hero-secondary">
+                        <li>Header Link One</li>
+                        <li>Header Link Two</li>
+                        <li>Header Link Three</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Hero -->
+         <div class="container color-dark">
+            <!-- Left Div -->
+            <div class="container-hero-left">
+                <p class="text-hero-main">This Website is Awesome</p>
+                <p class="">This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast</p>
+                <button class="">Sign Up</button>
+            </div>
+            <!-- Right Div -->
+            <div class="container-hero-right">
+                <img src="https://miro.medium.com/v2/resize:fit:1200/1*chhKo9KEel7n7hi0O_cEPA.png" width="400" height="250" style="border-radius: 25px;">
+            </div>
+         </div>
     </body>
 </html>
