Finish Hero, Finish Random Information Section. Getting the hero section together wasn't too hard once I figured out my div's. Went ahead and added The Odin Project logo to make it more fun.  Woo, graphics! The random information section was pretty easily...div div div div div div

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <body>
         <!-- Header -->
+        <div class="section">
         <div class="container color-dark">
             <div class="header color-dark">
             <!-- Left Div -->
@@ -39,16 +40,47 @@
         </div>
 
         <!-- Hero -->
-         <div class="container color-dark">
-            <!-- Left Div -->
-            <div class="container-hero-left">
-                <p class="text-hero-main">This Website is Awesome</p>
-                <p class="">This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast</p>
-                <button class="">Sign Up</button>
+         <div class="section color-dark">
+            <div class="container">
+                <div class="hero">
+                    <!-- Left Div -->
+                    <div class="container-hero-left">
+                        <p class="text-hero-main">This Website is Awesome</p>
+                        <p class="text-hero-secondary">This website has some subtext that goes here under the main title.  It's a smaller font and the color is lower contrast</p>
+                        <button class="hero-button color-button">Sign Up</button>
+                    </div>
+                    <!-- Right Div -->
+                    <div class="container-hero-right">
+                        <img src="https://miro.medium.com/v2/resize:fit:1200/1*chhKo9KEel7n7hi0O_cEPA.png" height="202" style="border-radius: 25px;">
+                    </div>
+                </div> 
             </div>
-            <!-- Right Div -->
-            <div class="container-hero-right">
-                <img src="https://miro.medium.com/v2/resize:fit:1200/1*chhKo9KEel7n7hi0O_cEPA.png" width="400" height="250" style="border-radius: 25px;">
+        </div>
+
+        <!-- Some Random Information -->
+         <div class="section">
+            <div class="container">
+                <div class "information">
+                    <p class="text-information-header">Some Random Information.</p>
+                    <div class="information-box">
+                        <div class="information-box-container">
+                            <div class="information-img"><img src=""></div>
+                            <div class="information-text"><p> This is some subtext under and illustration or image</p></div>
+                        </div>
+                        <div class="information-box-container">
+                            <div class="information-img"><img src=""></div>
+                            <div class="information-text"><p> This is some subtext under and illustration or image</p></div>
+                        </div>
+                        <div class="information-box-container">
+                            <div class="information-img"><img src=""></div>
+                            <div class="information-text"><p> This is some subtext under and illustration or image</p></div>
+                        </div>
+                        <div class="information-box-container">
+                            <div class="information-img"><img src=""></div>
+                            <div class="information-text"><p> This is some subtext under and illustration or image</p></div>
+                        </div>
+                    </div>  
+                </div> 
             </div>
          </div>
     </body>
