--- a/index.html
+++ b/index.html
@@ -83,5 +83,19 @@
                 </div> 
             </div>
          </div>
+
+         <!-- Quote Section -->
+        <div class="section">
+            <div class="container color-quote">
+                <div class="quote-container">
+                    <p class="text-quote">This is an inspiring quote, or a testinmonial from a customer.  Maybe it's just filling up space, or maybe people will actually read it.  WHo knows?  All I know is that it looks nice.</p>
+                    <p class="text-quote-bold">-Thor, God of Thunder</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Call to Action -->
+
+        <!-- Footer -->
     </body>
 </html>
