Add call to action. Fairly straight forward CTA, nothing too difficult.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,19 @@
         </div>
 
         <!-- Call to Action -->
-
+        <div class="section">
+            <div class="container">
+                <div class="cta-container  color-button">
+                    <div class="cta-text">
+                        <p class="text-cta-bold">Call to Action! It's Time!</p>
+                        <p class="text-cta-regular">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <div class="cta-button-container">
+                        <button class="cta-button">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Footer -->
     </body>
 </html>
