--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                 </div>
             </div>
         </div>
+
         <!-- Footer -->
+         <div class="section">
+            <div class="container color-dark">
+                <p class="text-footer">Copyright © The Odin Project 2024</p>
+            </div>
+         </div>
     </body>
 </html>
